Update components, add auth features