@@ -10,11 +10,13 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @Service
 public class TillServiceImpl implements TillService {
 
+    public static final String TOTAL_RESULT_MSG = "Total bill: %s aws and %s clouds";
+    public static final String NO_PRODUCTS = "No products selected.";
+    public static final int MIN_PRODUCTS = 3;
     private final Map<Product, Integer> priceList = new HashMap<>();
     private final List<DealStrategy> dealStrategies = new ArrayList<>();
 
@@ -22,7 +24,19 @@ public class TillServiceImpl implements TillService {
     public String calculateUserBill(List<ProductDTO> productsDTOs) {
         List<Product> products = productsDTOs.stream()
                 .map(ProductDTO::toProduct)
-                .collect(Collectors.toList());
+                .toList();
+
+        if (products.isEmpty()) {
+            return NO_PRODUCTS;
+        }
+
+        if (products.size() < MIN_PRODUCTS) {
+            int result = products.stream()
+                    .mapToInt(priceList::get)
+                    .sum();
+
+            return calculateResult(result);
+        }
 
         return summarizePurchaseCost(products);
     }
@@ -40,12 +54,16 @@ public class TillServiceImpl implements TillService {
                 .mapToInt(entry -> entry.getValue() * priceList.get(entry.getKey()))
                 .sum();
 
-        int aws = result / 100;
-        int clouds = result % 100;
-        return String.format("Total bill: %s aws and %s clouds", aws, clouds);
+        return calculateResult(result);
     }
 
     public void addDeal(DealStrategy dealStrategy) {
         dealStrategies.add(dealStrategy);
+    }
+
+    private static String calculateResult(int result) {
+        int aws = result / 100;
+        int clouds = result % 100;
+        return String.format(TOTAL_RESULT_MSG, aws, clouds);
     }
 }
